// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatInput snapshots matches snapshot in default state 1`] = `
<View
  intensity={56}
  style={
    {
      "alignItems": "flex-end",
      "flexDirection": "row",
      "gap": 8,
      "marginTop": 12,
      "padding": 8,
    }
  }
>
  <TextInput
    accessibilityLabel="a11y.chat.message_input"
    editable={true}
    multiline={true}
    onChangeText={[MockFunction]}
    placeholder="chatInput.placeholder"
    placeholderTextColor="#334155"
    style={
      [
        {
          "borderRadius": 14,
          "borderWidth": 1,
          "flex": 1,
          "maxHeight": 120,
          "minHeight": 44,
          "paddingHorizontal": 12,
          "paddingVertical": 10,
          "writingDirection": "auto",
        },
        {
          "backgroundColor": "rgba(255,255,255,0.7)",
          "borderColor": "rgba(148,163,184,0.45)",
          "color": "#0F172A",
        },
      ]
    }
    value=""
  />
  <View
    accessibilityHint="a11y.chat.send_hint"
    accessibilityLabel="a11y.chat.send"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "borderRadius": 12,
          "paddingHorizontal": 14,
          "paddingVertical": 10,
        },
        {
          "backgroundColor": "#1D4ED8",
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "fontWeight": "700",
          },
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      chatInput.send
    </Text>
  </View>
</View>
`;

exports[`ChatInput snapshots matches snapshot in sending state 1`] = `
<View
  intensity={56}
  style={
    {
      "alignItems": "flex-end",
      "flexDirection": "row",
      "gap": 8,
      "marginTop": 12,
      "padding": 8,
    }
  }
>
  <TextInput
    accessibilityLabel="a11y.chat.message_input"
    editable={true}
    multiline={true}
    onChangeText={[MockFunction]}
    placeholder="chatInput.placeholder"
    placeholderTextColor="#334155"
    style={
      [
        {
          "borderRadius": 14,
          "borderWidth": 1,
          "flex": 1,
          "maxHeight": 120,
          "minHeight": 44,
          "paddingHorizontal": 12,
          "paddingVertical": 10,
          "writingDirection": "auto",
        },
        {
          "backgroundColor": "rgba(255,255,255,0.7)",
          "borderColor": "rgba(148,163,184,0.45)",
          "color": "#0F172A",
        },
      ]
    }
    value="Hello"
  />
  <View
    accessibilityHint="a11y.chat.send_hint"
    accessibilityLabel="a11y.chat.send"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "borderRadius": 12,
          "paddingHorizontal": 14,
          "paddingVertical": 10,
        },
        {
          "backgroundColor": "#1D4ED8",
        },
      ]
    }
  >
    <ActivityIndicator
      color="#FFFFFF"
    />
  </View>
</View>
`;

exports[`ChatMessageBubble snapshots matches snapshot for assistant message 1`] = `
<View>
  <View
    accessibilityHint="a11y.chat.long_press_hint"
    accessibilityLabel="a11y.chat.assistant_message"
    accessibilityRole="text"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "borderRadius": 16,
          "borderWidth": 1,
          "maxWidth": "85%",
          "padding": 12,
        },
        {
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(255,255,255,0.72)",
          "borderColor": "rgba(148,163,184,0.22)",
        },
      ]
    }
  >
    <View>
      <Text>
        Hello, how can I help?
      </Text>
    </View>
    <Text
      style={
        [
          {
            "fontSize": 11,
            "marginTop": 6,
          },
          {
            "color": "rgba(100,116,139,0.92)",
          },
        ]
      }
    >
      12:30 PM
    </Text>
  </View>
</View>
`;

exports[`ChatMessageBubble snapshots matches snapshot for user message 1`] = `
<View>
  <View
    accessibilityLabel="a11y.chat.user_message"
    accessibilityRole="text"
    style={
      [
        {
          "borderRadius": 16,
          "borderWidth": 1,
          "maxWidth": "85%",
          "padding": 12,
        },
        {
          "alignSelf": "flex-end",
          "backgroundColor": "rgba(30, 64, 175, 0.88)",
          "borderColor": "rgba(191, 219, 254, 0.6)",
        },
      ]
    }
  >
    <Text
      style={
        [
          {},
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      Hello, how can I help?
    </Text>
    <Text
      style={
        [
          {
            "fontSize": 11,
            "marginTop": 6,
          },
          {
            "color": "rgba(100,116,139,0.92)",
          },
        ]
      }
    >
      12:30 PM
    </Text>
  </View>
</View>
`;

exports[`ErrorBoundary snapshots matches snapshot when rendering children normally 1`] = `
<Text>
  Safe content
</Text>
`;

exports[`ErrorBoundary snapshots matches snapshot when showing fallback after error 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#0F172A",
      "flex": 1,
      "justifyContent": "center",
      "padding": 32,
    }
  }
>
  <Text
    style={
      {
        "color": "#EF4444",
        "fontSize": 48,
        "fontWeight": "700",
        "marginBottom": 16,
      }
    }
  >
    !
  </Text>
  <Text
    style={
      {
        "color": "#F8FAFC",
        "fontSize": 22,
        "fontWeight": "700",
        "marginBottom": 8,
        "textAlign": "center",
      }
    }
  >
    Something went wrong
  </Text>
  <Text
    style={
      {
        "color": "#94A3B8",
        "fontSize": 15,
        "lineHeight": 22,
        "marginBottom": 32,
        "textAlign": "center",
      }
    }
  >
    The app encountered an unexpected error. Your data is safe.
  </Text>
  <View
    accessibilityLabel="Reload"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#2563EB",
        "borderRadius": 12,
        "opacity": 1,
        "paddingHorizontal": 32,
        "paddingVertical": 14,
      }
    }
  >
    <Text
      style={
        {
          "color": "#FFFFFF",
          "fontSize": 16,
          "fontWeight": "600",
        }
      }
    >
      Reload
    </Text>
  </View>
</View>
`;

exports[`WelcomeCard snapshots matches snapshot in museum mode 1`] = `
<View
  intensity={48}
  style={
    {
      "marginHorizontal": 4,
      "padding": 20,
    }
  }
>
  <Text
    style={
      [
        {
          "fontSize": 20,
          "fontWeight": "700",
          "textAlign": "center",
        },
        {
          "color": "#0F172A",
        },
      ]
    }
  >
    welcome.title
  </Text>
  <Text
    style={
      [
        {
          "fontSize": 14,
          "marginTop": 4,
          "textAlign": "center",
        },
        {
          "color": "#475569",
        },
      ]
    }
  >
    welcome.subtitle
  </Text>
  <View
    style={
      {
        "gap": 10,
        "marginTop": 16,
      }
    }
  >
    <View
      accessibilityHint="a11y.chat.camera_suggestion_hint"
      accessibilityLabel="welcome.suggestions.museum_camera"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 14,
            "borderWidth": 1,
            "flexDirection": "row",
            "gap": 10,
            "paddingHorizontal": 14,
            "paddingVertical": 12,
          },
          {
            "backgroundColor": "rgba(255,255,255,0.64)",
            "borderColor": "rgba(148, 163, 184, 0.35)",
          },
          false,
        ]
      }
    >
      <Text
        color="#1D4ED8"
        size={18}
      >
        camera-outline
      </Text>
      <Text
        numberOfLines={2}
        style={
          [
            {
              "flex": 1,
              "fontSize": 14,
              "fontWeight": "500",
            },
            {
              "color": "#0F172A",
            },
          ]
        }
      >
        welcome.suggestions.museum_camera
      </Text>
    </View>
    <View
      accessibilityHint="a11y.chat.suggestion_hint"
      accessibilityLabel="welcome.suggestions.museum_history"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 14,
            "borderWidth": 1,
            "flexDirection": "row",
            "gap": 10,
            "paddingHorizontal": 14,
            "paddingVertical": 12,
          },
          {
            "backgroundColor": "rgba(255,255,255,0.64)",
            "borderColor": "rgba(148, 163, 184, 0.35)",
          },
          false,
        ]
      }
    >
      <Text
        color="#1D4ED8"
        size={18}
      >
        time-outline
      </Text>
      <Text
        numberOfLines={2}
        style={
          [
            {
              "flex": 1,
              "fontSize": 14,
              "fontWeight": "500",
            },
            {
              "color": "#0F172A",
            },
          ]
        }
      >
        welcome.suggestions.museum_history
      </Text>
    </View>
    <View
      accessibilityHint="a11y.chat.suggestion_hint"
      accessibilityLabel="welcome.suggestions.museum_next"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 14,
            "borderWidth": 1,
            "flexDirection": "row",
            "gap": 10,
            "paddingHorizontal": 14,
            "paddingVertical": 12,
          },
          {
            "backgroundColor": "rgba(255,255,255,0.64)",
            "borderColor": "rgba(148, 163, 184, 0.35)",
          },
          false,
        ]
      }
    >
      <Text
        color="#1D4ED8"
        size={18}
      >
        compass-outline
      </Text>
      <Text
        numberOfLines={2}
        style={
          [
            {
              "flex": 1,
              "fontSize": 14,
              "fontWeight": "500",
            },
            {
              "color": "#0F172A",
            },
          ]
        }
      >
        welcome.suggestions.museum_next
      </Text>
    </View>
  </View>
</View>
`;

exports[`WelcomeCard snapshots matches snapshot in standard mode 1`] = `
<View
  intensity={48}
  style={
    {
      "marginHorizontal": 4,
      "padding": 20,
    }
  }
>
  <Text
    style={
      [
        {
          "fontSize": 20,
          "fontWeight": "700",
          "textAlign": "center",
        },
        {
          "color": "#0F172A",
        },
      ]
    }
  >
    welcome.title
  </Text>
  <Text
    style={
      [
        {
          "fontSize": 14,
          "marginTop": 4,
          "textAlign": "center",
        },
        {
          "color": "#475569",
        },
      ]
    }
  >
    welcome.subtitle
  </Text>
  <View
    style={
      {
        "gap": 10,
        "marginTop": 16,
      }
    }
  >
    <View
      accessibilityHint="a11y.chat.camera_suggestion_hint"
      accessibilityLabel="welcome.suggestions.standard_camera"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 14,
            "borderWidth": 1,
            "flexDirection": "row",
            "gap": 10,
            "paddingHorizontal": 14,
            "paddingVertical": 12,
          },
          {
            "backgroundColor": "rgba(255,255,255,0.64)",
            "borderColor": "rgba(148, 163, 184, 0.35)",
          },
          false,
        ]
      }
    >
      <Text
        color="#1D4ED8"
        size={18}
      >
        camera-outline
      </Text>
      <Text
        numberOfLines={2}
        style={
          [
            {
              "flex": 1,
              "fontSize": 14,
              "fontWeight": "500",
            },
            {
              "color": "#0F172A",
            },
          ]
        }
      >
        welcome.suggestions.standard_camera
      </Text>
    </View>
    <View
      accessibilityHint="a11y.chat.suggestion_hint"
      accessibilityLabel="welcome.suggestions.standard_style"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 14,
            "borderWidth": 1,
            "flexDirection": "row",
            "gap": 10,
            "paddingHorizontal": 14,
            "paddingVertical": 12,
          },
          {
            "backgroundColor": "rgba(255,255,255,0.64)",
            "borderColor": "rgba(148, 163, 184, 0.35)",
          },
          false,
        ]
      }
    >
      <Text
        color="#1D4ED8"
        size={18}
      >
        color-palette-outline
      </Text>
      <Text
        numberOfLines={2}
        style={
          [
            {
              "flex": 1,
              "fontSize": 14,
              "fontWeight": "500",
            },
            {
              "color": "#0F172A",
            },
          ]
        }
      >
        welcome.suggestions.standard_style
      </Text>
    </View>
    <View
      accessibilityHint="a11y.chat.suggestion_hint"
      accessibilityLabel="welcome.suggestions.standard_question"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 14,
            "borderWidth": 1,
            "flexDirection": "row",
            "gap": 10,
            "paddingHorizontal": 14,
            "paddingVertical": 12,
          },
          {
            "backgroundColor": "rgba(255,255,255,0.64)",
            "borderColor": "rgba(148, 163, 184, 0.35)",
          },
          false,
        ]
      }
    >
      <Text
        color="#1D4ED8"
        size={18}
      >
        help-circle-outline
      </Text>
      <Text
        numberOfLines={2}
        style={
          [
            {
              "flex": 1,
              "fontSize": 14,
              "fontWeight": "500",
            },
            {
              "color": "#0F172A",
            },
          ]
        }
      >
        welcome.suggestions.standard_question
      </Text>
    </View>
  </View>
</View>
`;
